[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Modules/UI/custom_item_list.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontIngame.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Modules/UI/Content.gd" type="Script" id=3]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Modules/UI/styles/button_right.tres" type="Theme" id=4]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Modules/UI/styles/button_left.tres" type="Theme" id=5]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Modules/UI/styles/button_center.tres" type="Theme" id=6]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Modules/UI/styles/panel_background.tres" type="StyleBox" id=7]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 4.0
content_margin_right = 4.0
draw_center = false

[node name="Content" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
custom_styles/panel = ExtResource( 7 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 10.0
margin_right = 770.0
margin_bottom = 572.0

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_right = 764.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MENU_CURRENT_LOADED_PACKS"
align = 1

[node name="Packlist" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 34.0
margin_right = 764.0
margin_bottom = 475.0

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 479.0
margin_right = 764.0
margin_bottom = 509.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MENU_HINT_UPDATED_CONTENT_PACK"
align = 1

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 513.0
margin_right = 764.0
margin_bottom = 562.0

[node name="Back" type="Button" parent="VBoxContainer/Buttons"]
margin_right = 252.0
margin_bottom = 49.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "MENU_BACK"
align = 0

[node name="Open" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 256.0
margin_right = 508.0
margin_bottom = 49.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
theme = ExtResource( 6 )
text = "MENU_OPEN_ADDONS"

[node name="Import" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 512.0
margin_right = 764.0
margin_bottom = 49.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
theme = ExtResource( 4 )
text = "MENU_IMPORT"
align = 2

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 6.0
margin_top = 8.0
margin_right = 770.0
margin_bottom = 572.0
window_title = "Open File(s)"
resizable = true
mode = 1
access = 2
filters = PoolStringArray( "*.pck ; Content Packs" )
current_dir = "/Godot Projekte/Libre-TrainSim/src"
current_path = "/Godot Projekte/Libre-TrainSim/src/"

[connection signal="pressed" from="VBoxContainer/Buttons/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Open" to="." method="_on_Open_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Import" to="." method="_on_Import_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
